fix horizontal overflow

--- a/recorder/static/css/stylesheet.css
+++ b/recorder/static/css/stylesheet.css
@@ -1,3 +1,8 @@
+html, body {
+    overflow-x:hidden;
+    width:100%;
+  }
+
 .base-background {
     background-color: rgb(205, 248, 188);
 }
